dinoco_docs/src/content/v0.0.1/it-it/orm/update.mdx
export const title = "update";

# update

Utilizzato per aggiornare i record filtrati.

---

## Cosa puoi fare

- `.cond(...)`: definisce quali record devono essere aggiornati.
- `.values(item)`: specifica i nuovi valori del record.
- `.connect(...)`: crea collegamenti di relazione supportati per la scrittura.
- `.disconnect(...)`: rimuove collegamenti di relazione supportati per la scrittura.
- `.returning::<T>()`: restituisce i record aggiornati in una proiezione tipizzata.
- `.execute(&client)`: esegue l'aggiornamento nel database.

## Ritorno

Senza `.returning::<T>()`, il ritorno è:

```rust
DinocoResult<()>
```

Con `.returning::<T>()`, il ritorno diventa:

```rust
DinocoResult<Vec<T>>
```

Nota:

- `update().returning()` non supporta scritture relazionali con `.connect(...)` o `.disconnect(...)`.

## Esempio di aggiornamento dei campi

```rust
dinoco::update::<User>()
    .cond(|w| w.id.eq(10))
    .values(User {
        id: 10,
        email: "novo@acme.com".to_string(),
        name: "Novo Nome".to_string(),
    })
    .execute(&client)
    .await?;
```

## Esempio con `connect(...)`

Utilizzato per connettere relazioni supportate per la scrittura, solitamente Many to Many.

```rust
dinoco::update::<User>()
    .cond(|w| w.id.eq(10))
    .connect(|r| r.roles().slug.eq("admin"))
    .execute(&client)
    .await?;
```

## Esempio con `disconnect(...)`

Utilizzato per disconnettere le relazioni.

```rust
dinoco::update::<User>()
    .cond(|w| w.id.eq(10))
    .disconnect(|r| r.roles().slug.eq("guest"))
    .execute(&client)
    .await?;
```

## Filtri disponibili in connect e disconnect

- `eq`
- `neq`
- `gt`
- `gte`
- `lt`
- `lte`
- `in_values`
- `not_in_values`
- `is_null`
- `is_not_null`
- `includes`
- `starts_with`
- `ends_with`

## Passi successivi

- [**`update_many::<M>()`**](/v0.0.1/orm/update-many): Aggiornamento in batch.
- [**`find_and_update::<M>()`**](/v0.0.1/orm/find-and-update): aggiornamento atomico con ritorno.
